<resources>
    <string name="app_name">号码认证Demo</string>
    
    <string name="btn_auth">本机号码校验场景</string>
    <string name="btn_login">一键登录场景</string>
    <string name="btn_login_delay">延迟登录场景</string>
    <string name="btn_env_check">环境检测</string>

    <string name="msg_login">一进app就登录的流程</string>
    <string name="msg_login_delay">不需要用户先登录的流程</string>
    <string name="msg_env_check">检测蜂窝网络的状态</string>


    <string name="switch_msg">切换到短信登录页面</string>
    <string name="custom_title">免密码登录</string>
    <string name="custom_slogan">那小子真帅</string>
    <string name="custom_toast">同意服务条款才可以登录</string>
</resources>
